# lssmtp

./: CMakeLists.txt  install.sh  smtp.json  uninstall.sh
include/ls/smtp/: Config.h  Message.h  Request.h  Tool.h  sample
sample/: test.cpp
src/ls/smtp/: Client.cpp  Client.h  Config.cpp  Request.cpp  SmtpConfig.cpp  SmtpConfig.h  Tool.cpp  Tool.h
